bug fixes to the header spacing

--- a/src/_scss/_header.scss
+++ b/src/_scss/_header.scss
@@ -33,9 +33,18 @@
         -webkit-tap-highlight-color: transparent;
         color: $navbar-link-color;
 
+        @include transition(all $animation-speed $animation-easing);
+
         padding: 0 ($spacer-horizontal * 1);
         margin: 0 0 0 $spacer-horizontal;
         border-radius: $border-radius;
+
+        &:hover {
+            @include transition(all ($animation-speed * .5) $animation-easing);
+            color: $navbar-link-hover-color;
+            background: $navbar-link-hover-background;
+        }
+
         &.nav-cv,&.nav-resume,&.nav-photos {
             display: none;
         }
@@ -47,18 +56,21 @@
         height: $logo-size;
         z-index: 3;
         margin: 0;
-        padding: 0;
+        padding: 0.25em;
         overflow: hidden;
         &:before {
             display: inline-block;
             content: "";
-            // background-color: transparentize($brand-color,0.8);
             background-image: url('data:image/svg+xml,<svg viewBox="0 0 563 563" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill="currentColor" d="M131.853 333.434L562.468 523.367L336.482 193.322L131.853 333.434Z" /><path fill="currentColor" d="M440.148 306.588L557.907 39.6064L353.279 179.718L440.148 306.588Z" /><path fill="currentColor" d="M119.371 315.67L111.161 134.941L198.03 261.811L119.371 315.67Z" /><path fill="currentColor" d="M392.269 469.535L226.741 396.524L313.61 523.394L392.269 469.535Z" /><path fill="currentColor" d="M93.5943 139.347L0.373047 201.727L95.6468 198.417L93.5943 139.347Z" /></svg>');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: auto 100%;
             width: 100%;
             height: 100%;
+            &:hover {
+                filter: invert(100%);
+            }
+
             @media (prefers-color-scheme: dark) {
                 filter: invert(100%);
             }
